--- a/css/link_1.css
+++ b/css/link_1.css
@@ -6,7 +6,7 @@ img{border:0px;}
 h1{color:#006633;font-size:20pt;font-weight:bold;padding:0;margin:12px 0;}
 #resulth1{background-color:#ffefe7;padding:0px 5px 0px 5px;border-top:#930 1px dotted;}
 h2{font-size:18pt;font-weight:bold;color:#006633;padding:0; margin-bottom: 2px;}
-h3{font-size:16pt;font-weight:bold;color:#006633;}
+h3{font-size:16pt;font-weight:bold;color:#2596be;}
 h3 a{color:#417516;}
 h3 a:hover{text-decoration:none;}
 h4{font-size:13pt;font-weight: bold;padding:0; margin: 0px;}
